# ddccontrol-db

./: .editorconfig  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  ChangeLog  INSTALL  MONITORS.md  Makefile  Makefile.am  README.md  autogen.sh  configure  configure.ac  configure.impl
.github/: .release-please-manifest.json  release-please-config.json  release-please-version.txt
.github/ISSUE_TEMPLATE/: unsupported-monitor.yml  unsupported_monitor.yml
.github/workflows/: ci.yml  prepare-release.yml  publish-release.yml  release-please.yml  release.yml
build-aux/: make-config.sh
db/: Makefile.am  options.xml  options.xml.h  options.xml.in
db/monitor/: ACI19E5.xml  ACI23B1.xml  ACI27B5.xml  ACR01C7.xml  ACR0364.xml  ACR0692.xml  ACR06B1.xml  ACR06CF.xml  ACR072B.xml  AOC2260.xml  AOC2269.xml  AOC2343.xml  AOC2401.xml  AOC2402.xml  AOC3279.xml  AOClcd.xml  APT1601.xml  AUS2722.xml  AUS28B1.xml  AUS32AD.xml  AUS3453.xml  BNQ78CE.xml  BNQ78DB.xml  BNQ78E7.xml  BNQ78E9.xml  BNQ7938.xml  BNQ7F0E.xml  BNQ7F1C.xml  BNQ7F31.xml  BNQ7F33.xml  BNQ8301.xml  DEL400C.xml  DEL400D.xml  DEL4063.xml  DEL4065.xml  DEL4080.xml  DEL4090.xml  DEL40F3.xml  DEL4110.xml  DEL413A.xml  (+188 more)
ddccontrol-db/db/: options.xml  options.xml.in
doc/: how-to-add-a-monitor.md
doc/monitors/: AOC2260.md  DELA0BE.md  DELA0C3.md  PHL08DC.md
po/: LINGUAS  es.po  fr.po  ka.po  pl.po  ru.po  zh_CN.po
